--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
+.App{
+  display: flex;
+  justify-content: space-evenly;
+  gap:50px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+table{
+  border-collapse:collapse;
+  width:700px;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table, tr, td, th{
+  border:1px solid gray;
+  text-align:center;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+form{
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap:20px
 }
-
-.App-link {
-  color: #61dafb;
+th, td{
+  padding: 4px 10px;
 }
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+table button{
+  margin-left:3px;
+}
+form label{
+  display: block;
+}
+.high{
+  background:slateblue;
+  color:white;
 }
